/*
 * $Id: ChangeLog,v 1.6463 2009/05/25 14:37:59 marchuet Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2009-05-25 12:30 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * tests\xmltest\hbxml.c
    + added missing file to test TxmlDocument() class.

2009-05-25 16:38 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * include\hbapi.h
  * include\hbapifs.h
  * source\rdd\dbfnsx\dbfnsx1.c
    ! fixed minor warnings. Thk's to Enrico Maria Giordano

2009-05-25 16:15 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * include\hbrddnsx.h
  * source\common\hbdate.c
    ! fixed some missing code from last update. fixed msvc build and dbfnsx rdd.

2009-05-22 18:00 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * include\hbdate.h  
  * source\common\hbdate.c
    + Added api hb_dbaselockEncode( char * pszTimeDate ) to encode this time of fields.  
  * include\dbinfo.ch
    + Added #define DBRI_DBASELOCK           10  /* get lock info */
      to get info about lock on shared tables and locked registers.
  * source\rdd\dbcmd.c
    + added LKSYS( nInfo ) function with this parameter:
      0 Time when lock was placed
      1 Date when lock was placed
      2 Login name of user who locked record or file
  * include\hbapirdd.h
  * include\hbrddbmc.h
  * include\hbrddcdx.h
  * include\hbrdddbf.h
  * include\hbrddmdx.h
  * include\hbrddnsx.h
  * include\hbrddntx.h
  * source\rdd\dbf1.c
  * source\rdd\workarea.c
    * modified dbf rdd structure, all rdds based on DBF need to be actualiced.
    + Added support to add system fields Type 0, for example _DBASELOCK
    + Added support to _dbaselock hidden field with lock information (user,time & date)
    + Added function LKSYS to retrieve lock information, works in similar way as dBase IV.