@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.6463 2009/05/25 14:37:59 marchuet Exp $
+ * $Id: ChangeLog,v 1.6464 2009/05/25 15:32:49 modalsist Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,14 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2009-05-26 13:18 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
+  * dbf1.c
+  * dbfcdx\dbfcdx1.c
+  * dbffpt\dbffpt1.c
+  * dbfnsx\dbfnsx1.c
+  * sdf1.c
+    * removed some cast warnings.
 
 2009-05-25 12:30 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
   * tests\xmltest\hbxml.c
